--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,29 @@
 
 .App__Aside {
   width: 50%;
-  background-color: #66DAC7;
+  background-color: #ffffff;
+  padding: 14% 10%;
+  overflow: auto;
+}
+
+.AsideHeading {
+  color: #3e3e58;
+  font-size: 4vw;
+  font-weight: 200;
+  font-family: "Gruppo", sans-serif;
+}
+
+.AsideHeadingBold {
+  color: #3e3e58;
+  font-weight: 900;
+  margin-bottom: 20px;
+  font-family: "Gruppo", sans-serif;
 }
 
 .App__Form {
   width: 50%;
-  background-color: #2E4158;
-  padding: 25px 40px;
+  background-color: #3e3e58;
+  padding: 14% 10%;
   overflow: auto;
 }
 
@@ -22,12 +38,12 @@
   margin-bottom: 10%;
 }
 
-.PageSwitcher__Item {
-  background-color: #4C5D72;
-  color: #9DA6B1;
+/* .PageSwitcher__Item {
+  background-color: #4c5d72;
+  color: #9da6b1;
   padding: 10px 25px;
   cursor: pointer;
-  font-size: .9em;
+  font-size: 0.9em;
   border: none;
   outline: none;
   display: inline-block;
@@ -35,7 +51,7 @@
 }
 
 .PageSwitcher__Item--Active {
-  background-color: #5ED0C0;
+  background-color: #5ed0c0;
   color: white;
 }
 
@@ -46,25 +62,43 @@
 .PageSwitcher__Item:last-child {
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
-}
+} */
 
 .FormCenter {
   margin-bottom: 100px;
 }
 
 .FormTitle {
-  color: #707C8B;
+  color: #707c8b;
   font-weight: 300;
+  font-size: 0.8em;
   margin-bottom: 50px;
+  font-family: "Gruppo";
+}
+
+.FormHeading {
+  color: #ffffff;
+  font-size: 4vw;
+  font-weight: 200;
+  font-family: "Gruppo", sans-serif;
+}
+
+.FormHeadingBold {
+  color: #ffffff;
+  font-weight: 900;
+  margin-bottom: 5%;
+  font-family: "Gruppo", sans-serif;
 }
 
 .FormTitle__Link {
-  color: #707C8B;
+  color: #707c8b;
   text-decoration: none;
   display: inline-block;
-  font-size: 1.7em;
-  margin: 0 10px;
+  font-size: 1.4vw;
+  margin: auto;
   padding-bottom: 5px;
+  padding-left: 7%;
+  padding-right: 7%;
 }
 
 .FormTitle__Link:first-child {
@@ -73,17 +107,17 @@
 
 .FormTitle__Link--Active {
   color: white;
-  border-bottom: 1px solid #199087;
+  border-bottom: 0.45vw solid #199087;
 }
 
 .FormField {
-  margin-bottom: 40px;
+  margin-bottom: 10%;
 }
 
 .FormField__Label {
   display: block;
   text-transform: uppercase;
-  font-size: .9em;
+  font-size: 0.9em;
   color: white;
 }
 .FormField__Input {
@@ -93,38 +127,38 @@
   color: white;
   outline: none;
   border-bottom: 1px solid #445366;
-  font-size: 1em;
+  font-size: 0.9em;
   font-weight: 300;
   padding-bottom: 10px;
   margin-top: 10px;
 }
 
 .FormField__Input::placeholder {
-  color: #616E7F;
+  color: #616e7f;
 }
 
 .FormField__Button {
-  background-color: #52C4B9;
+  background-color: #52c4b9;
   color: white;
   border: none;
   outline: none;
   border-radius: 25px;
   padding: 15px 70px;
-  font-size: .8em;
+  font-size: 0.9em;
   font-weight: 500;
 }
 
 .FormField__Link {
-  color: #66707D;
+  color: #66707d;
   text-decoration: none;
   display: inline-block;
-  border-bottom: 1.5px solid #225E62;
+  border-bottom: 1.5px solid #225e62;
   padding-bottom: 5px;
 }
 
 .FormField__CheckboxLabel {
-  color: #646F7D;
-  font-size: .9em;
+  color: #646f7d;
+  font-size: 0.9em;
 }
 
 .FormField__Checkbox {
